--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,10 +12,6 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@langchain/community": "^0.3.53",
-    "@langchain/google-genai": "^0.2.16",
-    "@langchain/openai": "^0.6.9",
-    "@langchain/textsplitters": "^0.1.0",
     "axois": "^0.0.1-security",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
@@ -23,10 +19,12 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "faiss-node": "^0.5.1",
-    "langchain": "^0.3.31",
+    "handlebars": "^4.7.7",
     "mongoose": "^8.18.1",
+    "ollama": "^0.6.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^24.34.0",
     "turndown": "^7.2.1"
   },
   "devDependencies": {
