--- a/devops-ai-agent/package.json
+++ b/devops-ai-agent/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.1",
     "electron": "^31.0.2",
     "lucide-react": "^0.395.0",
+    "mermaid": "^10.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
